[package]
name = "openai"
version = "0.2.1"
authors = ["Andrew <andrew@subarctic.org>"]
description = "OpenAI client for Rust"
license = "MIT"
categories = ["api-bindings", "emulators", "game-engines", "games", "multimedia"]

[dependencies]
glob = "0.2.11"
image = "0.12.1"
rand = "0.3.15"
hyper = "0.9.0"
vnc = "0.4"
rustc-serialize = "0.3.22"
x11 = "2.3"
websocket = "0.17.1"

